FIX: sidebar spacing

--- a/src/assets/css/tolkits.css
+++ b/src/assets/css/tolkits.css
@@ -23,9 +23,9 @@
   /* padding: 0.9px 20px !important; */
 }
 
-/*.pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item {*/
-/*    padding: 0.5px 25px 0px 12px !important;*/
-/*}*/
+.pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item {
+    padding: 0.5px 25px 0px 12px !important;
+}
 
 .virtual-game-image {
   cursor: pointer;
